Меню готово с орешками

--- a/src/drinks.html
+++ b/src/drinks.html
@@ -57,10 +57,10 @@
                 <a href="index.html">Главная</a>
             </div>
             <div class="header__items-item">
-                <a class="header_active" href="menu.html">Меню</a>
+                <a href="menu.html">Меню</a>
             </div>
             <div class="header__items-item">
-                <a href="drinks.html">Напитки</a>
+                <a class="header_active" href="drinks.html">Напитки</a>
             </div>
             <div class="header__items-item">
                 <a href="index.html">Доставка</a>
@@ -83,10 +83,10 @@
             <a href="index.html">Главная</a>
         </div>
         <div class="header__items__mobile-item">
-            <a class="header_active" href="menu.html">Меню</a>
+            <a href="menu.html">Меню</a>
         </div>
         <div class="header__items__mobile-item">
-            <a href="drinks.html">Напитки</a>
+            <a class="header_active" href="drinks.html">Напитки</a>
         </div>
         <div class="header__items__mobile-item">
             <a href="index.html">Доставка</a>
@@ -107,8 +107,7 @@
                 <div class="menu__items">
                     <div class="menu__item">
                         <div class="menu__item-price glutenFree sugarFree"> 16.50</div>
-                        <div class="menu__item-descr">Яйца Бенедикт на сырной вафле с лососем и голландским соусом /
-                            390г</div>
+                        <div class="menu__item-descr">Яйца Бенедикт на сырной вафле с лососем и голландским соусом / 390г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
@@ -238,14 +237,13 @@
                         <div class="menu__item-price glutenFree sugarFree"> 14.00</div>
                         <div class="menu__item-descr">Кето-завтрак со спаржей и беконом / 350г</div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
-                    </div>
+                    </div>                  
                 </div>
 
                 <div class="menu__items">
                     <div class="menu__item">
                         <div class="menu__item-price glutenFree sugarFree"> 9.50</div>
-                        <div class="menu__item-descr">Безглютеновые вафли из рикотты с крем-чизом, бананом, ягодами и
-                            мёдом / 300г</div>
+                        <div class="menu__item-descr">Безглютеновые вафли из рикотты с крем-чизом, бананом, ягодами и мёдом / 300г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
@@ -270,8 +268,7 @@
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price vegan sugarFree"> 7.00</div>
-                        <div class="menu__item-descr">Овсяная каша на кокосовом молоке с бананом, топингом и мёдом /
-                            360г</div>
+                        <div class="menu__item-descr">Овсяная каша на кокосовом молоке с бананом, топингом и мёдом / 360г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item-post">
@@ -281,8 +278,7 @@
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price glutenFree sugarFree"> 10.00</div>
-                        <div class="menu__item-descr">Блинчики на рисовой и амарантовой муке со взбитым крем-чизом /
-                            285г</div>
+                        <div class="menu__item-descr">Блинчики на рисовой и амарантовой муке со взбитым крем-чизом / 285г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item-post">
@@ -293,7 +289,7 @@
                     <div class="menu__item">
                         <div class="menu__item-price glutenFree sugarFree"> 10.00</div>
                         <div class="menu__item-descr">Галета ягодная с рикоттой и миндалем / 330г
-                        </div>
+                            </div>
                         <div class="menu__item-new"><img src="icons/new-icon.png" alt="new"></div>
                     </div>
                     <div class="menu__item">
@@ -303,16 +299,14 @@
                     </div>
                     <div class="menu__item">
                         <div class="menu__item-price vegan sugarFree"> 8.50</div>
-                        <div class="menu__item-descr">Чиа-пуддинг на растительном молоке с манговым пюре и гранолой /
-                            250г</div>
+                        <div class="menu__item-descr">Чиа-пуддинг на растительном молоке с манговым пюре и гранолой / 250г</div>
                         <div class="menu__item-new"></div>
                     </div>
                 </div>
                 <div class="menu__items">
                     <div class="menu__item">
                         <div class="menu__item-price glutenFree sugarFree"> 4.50</div>
-                        <div class="menu__item-descr">Чизкейк / шоколад / груша-дор блю / ягодный / кокосовый / ореховый
-                            / маковый / 100г</div>
+                        <div class="menu__item-descr">Чизкейк / шоколад / груша-дор блю / ягодный / кокосовый / ореховый / маковый / 100г</div>
                         <div class="menu__item-new"></div>
                     </div>
                     <div class="menu__item">
@@ -346,11 +340,10 @@
                         <div class="menu__item-descr">Пончик / 136г</div>
                         <div class="menu__item-new"></div>
                     </div>
-
+            
                 </div>
                 <div class="menu__greyLine"></div>
-                <div class="menu__nuts">Орешек из муки зеленой гречки с вареной сгущенкой hand made/ 1 шт. - 0.90р</div>
-            </div>
+        </div>
 
     </section>
 
