--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                 <a href="menu.html">Меню</a>
             </div>
             <div class="header__items-item">
-                <a href="index.html">Напитки</a>
+                <a href="drinks.html">Напитки</a>
             </div>
             <div class="header__items-item">
                 <a href="index.html">Доставка</a>
@@ -86,7 +86,7 @@
             <a href="menu.html">Меню</a>
         </div>
         <div class="header__items__mobile-item">
-            <a href="index.html">Напитки</a>
+            <a href="drinks.html">Напитки</a>
         </div>
         <div class="header__items__mobile-item">
             <a href="index.html">Доставка</a>
