Delivery+mobile готово

--- a/src/about.html
+++ b/src/about.html
@@ -54,7 +54,7 @@
         </div>
         <div class="header__items">
             <div class="header__items-item ">
-                <a class="header_active" href="index.html">Главная</a>
+                <a href="index.html">Главная</a>
             </div>
             <div class="header__items-item">
                 <a href="menu.html">Меню</a>
@@ -66,7 +66,7 @@
                 <a href="delivery.html">Доставка</a>
             </div>
             <div class="header__items-item">
-                <a href="about.html">О нас</a>
+                <a class="header_active" href="about.html">О нас</a>
             </div>
             <div class="header__items-item">
                 <a href="index.html">Контакты</a>
@@ -80,7 +80,7 @@
     </section>
     <div class="header__items__mobile">
         <div class="header__items__mobile-item">
-            <a class="header_active" href="index.html">Главная</a>
+            <a href="index.html">Главная</a>
         </div>
         <div class="header__items__mobile-item">
             <a href="menu.html">Меню</a>
@@ -92,148 +92,14 @@
             <a href="delivery.html">Доставка</a>
         </div>
         <div class="header__items__mobile-item">
-            <a href="about.html">О нас</a>
+            <a class="header_active" href="about.html">О нас</a>
         </div>
         <div class="header__items__mobile-item">
             <a href="index.html">Контакты</a>
         </div>
     </div>
-    <section class="promo">
-        <div class="icon-scroll"></div>
-        <div class="promo__icons">
-            <img class="promo__icon " src="icons/gluten-free.png" alt="gluten-free">
-            <img class="promo__icon " src="icons/no-sugar.png" alt="no-sugar">
-            <img class="promo__icon " data-wow-delay="3s" data-wow-duration="2s" src="icons/vegan.png" alt="vegan">
-        </div>
-        <div class="promo__goodMorning">
-            <span class="promo__goodMorning-hello wow animate__slideInLeft" data-wow-delay="2.5s"
-                data-wow-duration="2s">Доброе утро!</span><br>
-            <span class="promo__goodMorning-text">Мы будем рады накормить вас вкусными и полезными завтраками!<br><br>
-            </span>
-            <ul class="promo__goodMorning-list">
-                <li>Без глютена</li>
-                <li>Без лактозы</li>
-                <li>С низким содержанием сахара</li>
-            </ul>
-        </div>
-    </section>
-    <section class="description">
-        <div class="container">
-            <h2 class="description__title">Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
-            <div class="description__line"></div>
-            <div class="description__wrapper">
-                <div class="description__img">
-                    <img src="img/description/waiter.jpg" alt="sova_barista">
-                </div>
-                <div class="description__img">
-                    <img src="img/food/2.jpg" alt="sova_donnuts">
-                </div>
-            </div>
-            <div class="description__about rellax" data-rellax-speed="4">
-                <div class="description__about-title">О нас</div>
-                <div class="description__about-text">
-                    Кофейня СОВА - это пространство, которое объединяет разных интересных людей.<br>
 
-                    Место, где пахнет свежим кофе и целый день подают завтраки!<br>
 
-                    Место, где мы обьединили свежие и полезные продукты в одну красивую картинку на тарелке.<br>
-                    Мы предлагаем завтраки весь день. В нашем меню блюда с низким содержанием сахара (или без сахара),
-                    без глютена и лактозы.
-                </div>
-            </div>
-    </section>
-
-    <section class="novelty">
-        <div class="novelty__pre"></div>
-        <div class="novelty__post">
-            <div class="container">
-                <h2 class="novelty__title">Попробуйте наши новинки</h2>
-                <div class="novelty__line"></div>
-                <div class="novelty__wrapper">
-                    <img class="novelty__img" src="img/novelty/soup.jpg" alt="novelty_soup">
-                    <img class="novelty__img" src="img/novelty/medovik.jpg" alt="novelty_cake">
-                </div>
-            </div>
-            <div class="novelty__menu rellax" data-rellax-speed="4">
-                <div class="novelty__menu-title">Наши новинки</div>
-                <img class="novelty__menu-new" src="icons/new-icon.png" alt="novelty_new">
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Шпинатные панкейки с беконом, кленовым сиропом и глазуньей
-                    </div>
-                    <div class="novelty__menu-item-price">10.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Галета с тунцом, страчетеллой и цукини</div>
-                    <div class="novelty__menu-item-price">10.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Крем-суп из чечевицы</div>
-                    <div class="novelty__menu-item-price">8.50</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Кето-завтрак со спаржей и беконом</div>
-                    <div class="novelty__menu-item-price">14.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Сырники с кокосовой карамелью и медовой крошкой</div>
-                    <div class="novelty__menu-item-price">9.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Галета ягодная с рикоттой и миндалем</div>
-                    <div class="novelty__menu-item-price">10.00</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Галета груша-дор блю</div>
-                    <div class="novelty__menu-item-price">9.50</div>
-                </div>
-                <div class="novelty__menu-item">
-                    <div class="novelty__menu-item-title">Безглютеновый медовик с малиной</div>
-                    <div class="novelty__menu-item-price">4.50</div>
-                </div>
-            </div>
-        </div>
-
-    </section>
-    <section class="promotion">
-        <div class="promotion__pre"></div>
-        <div class="promotion__post">
-            <div class="container">
-                <div class="promotion__title">Скидки и акции!</div>
-                <div class="promotion__line"></div>
-                <div class="promotion__items">
-                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
-                        <div class="promotion__item-wrapper">
-                            <div class="promotion__item-title">Блюда на вынос</div>
-                            <div class="promotion__item-descr">со скидкой 10% от 15 рублей в чеке</div>
-                        </div>
-                        <div class="promotion__item-logo">
-                            <img src="icons/10off.png" alt="10%off">
-                        </div>
-                    </div>
-                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
-                        <div class="promotion__item-wrapper">
-                            <div class="promotion__item-title">Ланч</div>
-                            <div class="promotion__item-descr">со скидкой 10% на всё меню с 15:00 до 17:00</div>
-                        </div>
-                        <div class="promotion__item-logo">
-                            <img src="icons/10off.png" alt="10%off">
-                        </div>
-                    </div>
-                    <div class="promotion__item wow animate__bounceInUp" data-wow-duration="1.5s">
-                        <div class="promotion__item-wrapper">
-                            <div class="promotion__item-title">Кофе к завтраку</div>
-                            <div class="promotion__item-descr">бесплатно с 9:00 до 12:00</div>
-                        </div>
-                        <div class="promotion__item-logo">
-                            <img src="icons/free-icon.png" alt="free">
-                        </div>
-                    </div>
-                </div>
-                <div class="promotion__explanation">Скидки не суммируются и действуют только по будням!</div>
-            </div>
-           
-        </div>
-    </section>
 
     <footer class="footer">
         <div class="footer-logo">
@@ -244,9 +110,9 @@
             <div class="footer-contacts-item">
                 <div class="footer-contacts-item-img">
                     <svg width="20px" height="20px" viewBox="0 0 24 24"
-                        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-                        xmlns="http://www.w3.org/2000/svg" version="1.1"
-                        xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+                        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg"
+                        version="1.1" xmlns:cc="http://creativecommons.org/ns#"
+                        xmlns:dc="http://purl.org/dc/elements/1.1/">
                         <g transform="translate(0 -1028.4)">
                             <path
                                 d="m12 0c-4.4183 2.3685e-15 -8 3.5817-8 8 0 1.421 0.3816 2.75 1.0312 3.906 0.1079 0.192 0.221 0.381 0.3438 0.563l6.625 11.531 6.625-11.531c0.102-0.151 0.19-0.311 0.281-0.469l0.063-0.094c0.649-1.156 1.031-2.485 1.031-3.906 0-4.4183-3.582-8-8-8zm0 4c2.209 0 4 1.7909 4 4 0 2.209-1.791 4-4 4-2.2091 0-4-1.791-4-4 0-2.2091 1.7909-4 4-4z"
@@ -263,7 +129,14 @@
             </div>
             <div class="footer-contacts-item">
                 <div class="footer-contacts-item-img">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px" viewBox="0 0 122.88 122.88" enable-background="new 0 0 122.88 122.88" xml:space="preserve"><g><path fill="#f0ffff" fill-rule="evenodd" clip-rule="evenodd" d="M13.001,0h96.878c7.152,0,13.001,5.849,13.001,13.001v96.878 c0,7.152-5.849,13.001-13.001,13.001H13.001C5.849,122.88,0,117.031,0,109.879V13.001C0,5.849,5.849,0,13.001,0L13.001,0z M21.196,33.195c6.529,4.49,13.026,9,18.496,14.824c-3.148,13.872,9.386,24.945,20.829,31.483c4.461,2.551,6.432,4.35,11.411,3.48 l19.623,19.215C54.648,114.594,13.23,62.588,21.196,33.195L21.196,33.195z M76.99,78.052l4.304-4.382 c1.254-1.261,3.304-1.271,4.558-0.048l15.856,15.627c1.264,1.248,1.279,3.291,0.043,4.557l-4.311,4.369 c-1.234,1.271-3.279,1.271-4.55,0.051L77.028,82.599C75.766,81.354,75.749,79.306,76.99,78.052L76.99,78.052z M25.047,24.009 l3.129-3.787c1.333-1.628,3.771-1.871,5.386-0.533l16.232,13.378c1.631,1.34,1.869,3.775,0.533,5.397l-3.125,3.789 c-1.335,1.615-3.764,1.851-5.395,0.52L25.562,29.39C23.945,28.057,23.711,25.619,25.047,24.009L25.047,24.009z"/></g></svg>
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="20px"
+                        viewBox="0 0 122.88 122.88" enable-background="new 0 0 122.88 122.88" xml:space="preserve">
+                        <g>
+                            <path fill="#f0ffff" fill-rule="evenodd" clip-rule="evenodd"
+                                d="M13.001,0h96.878c7.152,0,13.001,5.849,13.001,13.001v96.878 c0,7.152-5.849,13.001-13.001,13.001H13.001C5.849,122.88,0,117.031,0,109.879V13.001C0,5.849,5.849,0,13.001,0L13.001,0z M21.196,33.195c6.529,4.49,13.026,9,18.496,14.824c-3.148,13.872,9.386,24.945,20.829,31.483c4.461,2.551,6.432,4.35,11.411,3.48 l19.623,19.215C54.648,114.594,13.23,62.588,21.196,33.195L21.196,33.195z M76.99,78.052l4.304-4.382 c1.254-1.261,3.304-1.271,4.558-0.048l15.856,15.627c1.264,1.248,1.279,3.291,0.043,4.557l-4.311,4.369 c-1.234,1.271-3.279,1.271-4.55,0.051L77.028,82.599C75.766,81.354,75.749,79.306,76.99,78.052L76.99,78.052z M25.047,24.009 l3.129-3.787c1.333-1.628,3.771-1.871,5.386-0.533l16.232,13.378c1.631,1.34,1.869,3.775,0.533,5.397l-3.125,3.789 c-1.335,1.615-3.764,1.851-5.395,0.52L25.562,29.39C23.945,28.057,23.711,25.619,25.047,24.009L25.047,24.009z" />
+                        </g>
+                    </svg>
                 </div>
                 <address class="footer-contacts-item-descr">
                     <a href="tel:375299140088">+375 (29) 914-00-88</a>
@@ -289,7 +162,7 @@
         </div>
         <div class="footer__powered">
             <a href="https://createmax.site/" target=”_blank”>Powered by <img src="icons/createmax192x192.png"
-                alt="createmax"></a>
+                    alt="createmax"></a>
         </div>
     </footer>
     <script src="js/wow.min.js"></script>
