--- a/src/menu.html
+++ b/src/menu.html
@@ -63,10 +63,10 @@
                 <a href="drinks.html">Напитки</a>
             </div>
             <div class="header__items-item">
-                <a href="index.html">Доставка</a>
+                <a href="delivery.html">Доставка</a>
             </div>
             <div class="header__items-item">
-                <a href="index.html">О нас</a>
+                <a href="about.html">О нас</a>
             </div>
             <div class="header__items-item">
                 <a href="index.html">Контакты</a>
@@ -89,10 +89,10 @@
             <a href="drinks.html">Напитки</a>
         </div>
         <div class="header__items__mobile-item">
-            <a href="index.html">Доставка</a>
+            <a href="delivery.html">Доставка</a>
         </div>
         <div class="header__items__mobile-item">
-            <a href="index.html">О нас</a>
+            <a href="about.html">О нас</a>
         </div>
         <div class="header__items__mobile-item">
             <a href="index.html">Контакты</a>
