--- a/src/about.html
+++ b/src/about.html
@@ -99,6 +99,15 @@
         </div>
     </div>
 
+    <section class="about">
+        <div class="container">
+            <div class="about__title">О нас</div>
+            <div class="about__greenLine"></div>
+            
+        </div>
+
+    </section>
+
 
 
     <footer class="footer">
