--- a/src/delivery.html
+++ b/src/delivery.html
@@ -110,7 +110,7 @@
                         <div class="delivery__item-descr">доставка 5 рублей</div>
                     </div>
                     <div class="delivery__item-logo">
-                        <img src="icons/10off.png" alt="10%off">
+                        <img style="padding: 10px;" src="img/delivery/coffee.png" alt="delivery">
                     </div>
                 </div>
                 <div class="delivery__item wow animate__bounceInUp" data-wow-duration="1.6s">
@@ -119,17 +119,21 @@
                         <div class="delivery__item-descr">доставка 3 рубля</div>
                     </div>
                     <div class="delivery__item-logo">
-                        <img src="icons/10off.png" alt="10%off">
+                        <img  src="img/delivery/2bags.png" alt="delivery">
                     </div>
                 </div>
                 <div class="delivery__item wow animate__bounceInUp" data-wow-duration="1.7s">
                     <div class="delivery__item-wrapper">
                         <div class="delivery__item-title">От 30 рублей</div>
-                        <div class="delivery__item-descr">доставка бесплатно + кофе в подарок <span>(эспрессо, американо, капучино)</span></div>
+                        <div class="delivery__item-descr">доставка бесплатно + кофе в подарок <span>(эспрессо,
+                                американо, капучино)</span></div>
                     </div>
                     <div class="delivery__item-logo">
-                        <img src="icons/free-icon.png" alt="free">
+                        <img src="img/delivery/3bags.png" alt="delivery">
                     </div>
+                    <!-- <div class="delivery__item-logo">
+                        <img src="img/delivery/delivery_bag.png" alt="delivery">
+                    </div> -->
                 </div>
             </div>
             <div class="delivery__explanation">
