--- a/src/about.html
+++ b/src/about.html
@@ -102,8 +102,39 @@
     <section class="about">
         <div class="container">
             <div class="about__title">О нас</div>
-            <div class="about__greenLine"></div>
-            
+            <div class="about__line"></div>
+            <div class="about__wrapper">
+                <div class="about__wrapper-descr">
+                    У нас «Доброе утро» целый день!<br>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, dolorum et? Explicabo voluptate possimus, adipisci id eum et nobis iusto incidunt iure, enim aperiam non voluptatibus temporibus impedit facilis excepturi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat delectus nulla, impedit alias dolores vero ipsam nisi, tempore deleniti repudiandae unde similique, omnis dicta mollitia excepturi blanditiis non nobis neque?
+                </div>
+                <div class="about__wrapper-slider">
+                    <div class="about__wrapper-slider-item">
+                        <img src="img/about/1.jpg" alt="slider-item">
+                    </div>
+                    <div class="about__wrapper-slider-item">
+                        <img src="img/about/2.jpg" alt="slider-item">
+                    </div>
+                    <div class="about__wrapper-slider-item">
+                        <img src="img/about/3.jpg" alt="slider-item">
+                    </div>
+                    <div class="about__wrapper-slider-item">
+                        <img src="img/about/4.jpg" alt="slider-item">
+                    </div>
+                    <div class="about__wrapper-slider-item">
+                        <img src="img/about/5.jpg" alt="slider-item">
+                    </div>
+                    <div class="about__wrapper-slider-item">
+                        <img src="img/about/6.jpg" alt="slider-item">
+                    </div>
+                    <div class="about__wrapper-slider-item">
+                        <img src="img/about/7.jpg" alt="slider-item">
+                    </div>
+                    <div class="about__wrapper-slider-item">
+                        <img src="img/about/8.jpg" alt="slider-item">
+                    </div>
+                </div>
+            </div>
         </div>
 
     </section>
