--- a/src/about.html
+++ b/src/about.html
@@ -136,7 +136,39 @@
                 </div>
             </div>
         </div>
-
+        <div class="about__reviews">
+            <div class="about__reviews-item">
+                <div class="about__reviews-item-descr">Очень вкусная еда, прекрасное обслуживание и очень красиво внутри. Мне нравится фишка "С добрым утром" в любое время суток. На мой взгляд там самые вкусные сырники и кофе, хотя, на самом деле, пока не было ни одного блюда, которое бы мне не понравилось. А и кстати, порции прям внушительные))</div>
+                <div class="about__reviews-item-photo">
+                    <img src="img/reviwes/Daria.png" alt="review">
+                </div>
+                <div class="about__reviews-item-name">Дарья</div>
+            </div>
+            <div class="about__reviews-item">
+                <div class="about__reviews-item-descr">Лучшие!❤️ Каждый день, во время отпуска, приезжали на завтрак в «Сову», всегда все на высшем уровне! Вкусно, разнообразно и розно!))
+                    Обслуживание топ! Как будем в Могилёве сразу к вам!</div>
+                <div class="about__reviews-item-photo">
+                    <img src="img/reviwes/Kristina.png" alt="review">
+                </div>
+                <div class="about__reviews-item-name">Кристина</div>
+            </div>
+            <div class="about__reviews-item">
+                <div class="about__reviews-item-descr">Очень приятное заведение, с вкусными завтраками в любое время и где тебе желают доброе утро в любое время суток. Заказали скрэмбел. Для тех кто любит островатую еду самое то</div>
+                <div class="about__reviews-item-photo">
+                    <img src="img/reviwes/Diana.png" alt="review">
+                </div>
+                <div class="about__reviews-item-name">Диана</div>
+            </div>
+            <div class="about__reviews-item">
+                <div class="about__reviews-item-descr">Очень красивая подача блюд, каждый раз хочется достать телефон и сфоткать.)
+                    Быстро, вкусно, позиционируется полезно
+                    Всегда тепло и тихонько играет музыка - это огромный плюс.</div>
+                <div class="about__reviews-item-photo">
+                    <img src="img/reviwes/Valentina.png" alt="review">
+                </div>
+                <div class="about__reviews-item-name">Валентина</div>
+            </div>
+        </div>
     </section>
 
 
