--- a/src/about.html
+++ b/src/about.html
@@ -106,7 +106,11 @@
             <div class="about__wrapper">
                 <div class="about__wrapper-descr">
                     У нас «Доброе утро» целый день!<br>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, dolorum et? Explicabo voluptate possimus, adipisci id eum et nobis iusto incidunt iure, enim aperiam non voluptatibus temporibus impedit facilis excepturi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat delectus nulla, impedit alias dolores vero ipsam nisi, tempore deleniti repudiandae unde similique, omnis dicta mollitia excepturi blanditiis non nobis neque?
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, dolorum et? Explicabo voluptate
+                    possimus, adipisci id eum et nobis iusto incidunt iure, enim aperiam non voluptatibus temporibus
+                    impedit facilis excepturi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat delectus
+                    nulla, impedit alias dolores vero ipsam nisi, tempore deleniti repudiandae unde similique, omnis
+                    dicta mollitia excepturi blanditiis non nobis neque?
                 </div>
                 <div class="about__wrapper-slider">
                     <div class="about__wrapper-slider-item">
@@ -138,14 +142,18 @@
         </div>
         <div class="about__reviews">
             <div class="about__reviews-item">
-                <div class="about__reviews-item-descr">Очень вкусная еда, прекрасное обслуживание и очень красиво внутри. Мне нравится фишка "С добрым утром" в любое время суток. На мой взгляд там самые вкусные сырники и кофе, хотя, на самом деле, пока не было ни одного блюда, которое бы мне не понравилось. А и кстати, порции прям внушительные))</div>
+                <div class="about__reviews-item-descr">Очень вкусная еда, прекрасное обслуживание и очень красиво
+                    внутри. Мне нравится фишка "С добрым утром" в любое время суток. На мой взгляд там самые вкусные
+                    сырники и кофе, хотя, на самом деле, пока не было ни одного блюда, которое бы мне не понравилось. А
+                    и кстати, порции прям внушительные))</div>
                 <div class="about__reviews-item-photo">
                     <img src="img/reviwes/Daria.png" alt="review">
                 </div>
                 <div class="about__reviews-item-name">Дарья</div>
             </div>
             <div class="about__reviews-item">
-                <div class="about__reviews-item-descr">Лучшие!❤️ Каждый день, во время отпуска, приезжали на завтрак в «Сову», всегда все на высшем уровне! Вкусно, разнообразно и розно!))
+                <div class="about__reviews-item-descr">Лучшие!❤️ Каждый день, во время отпуска, приезжали на завтрак в
+                    «Сову», всегда все на высшем уровне! Вкусно, разнообразно и розно!))
                     Обслуживание топ! Как будем в Могилёве сразу к вам!</div>
                 <div class="about__reviews-item-photo">
                     <img src="img/reviwes/Kristina.png" alt="review">
@@ -153,20 +161,29 @@
                 <div class="about__reviews-item-name">Кристина</div>
             </div>
             <div class="about__reviews-item">
-                <div class="about__reviews-item-descr">Очень приятное заведение, с вкусными завтраками в любое время и где тебе желают доброе утро в любое время суток. Заказали скрэмбел. Для тех кто любит островатую еду самое то</div>
+                <div class="about__reviews-item-descr">Очень приятное заведение, с вкусными завтраками в любое время и
+                    где тебе желают доброе утро в любое время суток. Заказали скрэмбел. Для тех кто любит островатую еду
+                    самое то</div>
                 <div class="about__reviews-item-photo">
                     <img src="img/reviwes/Diana.png" alt="review">
                 </div>
                 <div class="about__reviews-item-name">Диана</div>
             </div>
             <div class="about__reviews-item">
-                <div class="about__reviews-item-descr">Очень красивая подача блюд, каждый раз хочется достать телефон и сфоткать.)
+                <div class="about__reviews-item-descr">Очень красивая подача блюд, каждый раз хочется достать телефон и
+                    сфоткать.)
                     Быстро, вкусно, позиционируется полезно
                     Всегда тепло и тихонько играет музыка - это огромный плюс.</div>
                 <div class="about__reviews-item-photo">
                     <img src="img/reviwes/Valentina.png" alt="review">
                 </div>
                 <div class="about__reviews-item-name">Валентина</div>
+            </div>
+            <div class="about__reviews-dots">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
     </section>
