--- a/src/about.html
+++ b/src/about.html
@@ -105,12 +105,8 @@
             <div class="about__line"></div>
             <div class="about__wrapper">
                 <div class="about__wrapper-descr">
-                    У нас «Доброе утро» целый день!<br>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, dolorum et? Explicabo voluptate
-                    possimus, adipisci id eum et nobis iusto incidunt iure, enim aperiam non voluptatibus temporibus
-                    impedit facilis excepturi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat delectus
-                    nulla, impedit alias dolores vero ipsam nisi, tempore deleniti repudiandae unde similique, omnis
-                    dicta mollitia excepturi blanditiis non nobis neque?
+                    У нас «Доброе утро» целый день!<br><br>
+                    Мы радо накормить Вас вкусными и полезными завтраками в уютной атмосфере. В нашем меню вы найдете блюда, приготовленные из свежих и натуральных ингредиентов без использования глютена, сахара и лактозы. Также к завтраку вы вы можете насладиться горячим напитком, потому что в нашей кофейне мы варим не только классный КОФЕ, но и подаём вкуснейший натуральный ЧАЙ. А каждое время года мы удивим Вас сезонными блюдами, которые вы можете найти в нашем <a href="menu.html">меню.</a><br><br>Наши завтраки с чашечкой кофе или ароматного травяного чая наполнит тебя новыми идеями для самого нереального дня!
                 </div>
                 <div class="about__wrapper-slider">
                     <div class="about__wrapper-slider-item">
