--- a/src/delivery.html
+++ b/src/delivery.html
@@ -69,7 +69,7 @@
                 <a href="about.html">О нас</a>
             </div>
             <div class="header__items-item">
-                <a href="index.html">Контакты</a>
+                <a href="contacts.html">Контакты</a>
             </div>
         </div>
         <div class="header__hamburger">
@@ -95,7 +95,7 @@
             <a href="about.html">О нас</a>
         </div>
         <div class="header__items__mobile-item">
-            <a href="index.html">Контакты</a>
+            <a href="contacts.html">Контакты</a>
         </div>
     </div>
     <section class="delivery">
