--- a/src/contacts.html
+++ b/src/contacts.html
@@ -66,10 +66,10 @@
                 <a href="delivery.html">Доставка</a>
             </div>
             <div class="header__items-item">
-                <a class="header_active" href="about.html">О нас</a>
+                <a href="about.html">О нас</a>
             </div>
             <div class="header__items-item">
-                <a href="contacts.html">Контакты</a>
+                <a class="header_active" href="contacts.html">Контакты</a>
             </div>
         </div>
         <div class="header__hamburger">
@@ -92,96 +92,47 @@
             <a href="delivery.html">Доставка</a>
         </div>
         <div class="header__items__mobile-item">
-            <a class="header_active" href="about.html">О нас</a>
+            <a href="about.html">О нас</a>
         </div>
         <div class="header__items__mobile-item">
-            <a href="contacts.html">Контакты</a>
+            <a class="header_active" href="contacts.html">Контакты</a>
         </div>
     </div>
 
-    <section class="about">
+    <section class="contacts">
         <div class="container">
-            <div class="about__title">О нас</div>
-            <div class="about__line"></div>
-            <div class="about__wrapper">
-                <div class="about__wrapper-descr">
-                    У нас «Доброе утро» целый день!<br><br>
-                    Мы рады накормить Вас вкусными и полезными завтраками в уютной атмосфере. В нашем меню вы найдете блюда, приготовленные из свежих и натуральных ингредиентов без использования глютена, сахара и лактозы. Также к завтраку вы вы можете насладиться горячим напитком, потому что в нашей кофейне мы варим не только классный КОФЕ, но и подаём вкуснейший натуральный ЧАЙ. А каждое время года мы удивим Вас сезонными блюдами, которые вы можете найти в нашем <a href="menu.html">меню.</a><br><br>Наши завтраки с чашечкой кофе или ароматного травяного чая наполнит тебя новыми идеями для самого нереального дня!
+            <div class="contacts__title">Контакты</div>
+            <div class="contacts__line"></div>
+            <address class="contacts__descr">Мы находимся по адресу: г. Могилёв, улица Ленинская 38</address>
+            <div class="contacts__phone"><a href="tel:375299140088">+375 (29) 914-00-88</a></div>
+            <a class="contacts__social" href="https://www.instagram.com/sovacoffee.home">
+                <div class="contacts__social-img">
+                    <svg width="20px" height="20px" viewBox="0 0 256 256" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        preserveAspectRatio="xMidYMid">
+                        <g>
+                            <path
+                                d="M127.999746,23.06353 C162.177385,23.06353 166.225393,23.1936027 179.722476,23.8094161 C192.20235,24.3789926 198.979853,26.4642218 203.490736,28.2166477 C209.464938,30.5386501 213.729395,33.3128586 218.208268,37.7917319 C222.687141,42.2706052 225.46135,46.5350617 227.782844,52.5092638 C229.535778,57.0201472 231.621007,63.7976504 232.190584,76.277016 C232.806397,89.7746075 232.93647,93.8226147 232.93647,128.000254 C232.93647,162.177893 232.806397,166.225901 232.190584,179.722984 C231.621007,192.202858 229.535778,198.980361 227.782844,203.491244 C225.46135,209.465446 222.687141,213.729903 218.208268,218.208776 C213.729395,222.687649 209.464938,225.461858 203.490736,227.783352 C198.979853,229.536286 192.20235,231.621516 179.722476,232.191092 C166.227425,232.806905 162.179418,232.936978 127.999746,232.936978 C93.8200742,232.936978 89.772067,232.806905 76.277016,232.191092 C63.7971424,231.621516 57.0196391,229.536286 52.5092638,227.783352 C46.5345536,225.461858 42.2700971,222.687649 37.7912238,218.208776 C33.3123505,213.729903 30.538142,209.465446 28.2166477,203.491244 C26.4637138,198.980361 24.3784845,192.202858 23.808908,179.723492 C23.1930946,166.225901 23.0630219,162.177893 23.0630219,128.000254 C23.0630219,93.8226147 23.1930946,89.7746075 23.808908,76.2775241 C24.3784845,63.7976504 26.4637138,57.0201472 28.2166477,52.5092638 C30.538142,46.5350617 33.3123505,42.2706052 37.7912238,37.7917319 C42.2700971,33.3128586 46.5345536,30.5386501 52.5092638,28.2166477 C57.0196391,26.4642218 63.7971424,24.3789926 76.2765079,23.8094161 C89.7740994,23.1936027 93.8221066,23.06353 127.999746,23.06353 M127.999746,0 C93.2367791,0 88.8783247,0.147348072 75.2257637,0.770274749 C61.601148,1.39218523 52.2968794,3.55566141 44.1546281,6.72008828 C35.7374966,9.99121548 28.5992446,14.3679613 21.4833489,21.483857 C14.3674532,28.5997527 9.99070739,35.7380046 6.71958019,44.1551362 C3.55515331,52.2973875 1.39167714,61.6016561 0.769766653,75.2262718 C0.146839975,88.8783247 0,93.2372872 0,128.000254 C0,162.763221 0.146839975,167.122183 0.769766653,180.774236 C1.39167714,194.398852 3.55515331,203.703121 6.71958019,211.845372 C9.99070739,220.261995 14.3674532,227.400755 21.4833489,234.516651 C28.5992446,241.632547 35.7374966,246.009293 44.1546281,249.28042 C52.2968794,252.444847 61.601148,254.608323 75.2257637,255.230233 C88.8783247,255.85316 93.2367791,256 127.999746,256 C162.762713,256 167.121675,255.85316 180.773728,255.230233 C194.398344,254.608323 203.702613,252.444847 211.844864,249.28042 C220.261995,246.009293 227.400247,241.632547 234.516143,234.516651 C241.632039,227.400755 246.008785,220.262503 249.279912,211.845372 C252.444339,203.703121 254.607815,194.398852 255.229725,180.774236 C255.852652,167.122183 256,162.763221 256,128.000254 C256,93.2372872 255.852652,88.8783247 255.229725,75.2262718 C254.607815,61.6016561 252.444339,52.2973875 249.279912,44.1551362 C246.008785,35.7380046 241.632039,28.5997527 234.516143,21.483857 C227.400247,14.3679613 220.261995,9.99121548 211.844864,6.72008828 C203.702613,3.55566141 194.398344,1.39218523 180.773728,0.770274749 C167.121675,0.147348072 162.762713,0 127.999746,0 Z M127.999746,62.2703115 C91.698262,62.2703115 62.2698034,91.69877 62.2698034,128.000254 C62.2698034,164.301738 91.698262,193.730197 127.999746,193.730197 C164.30123,193.730197 193.729689,164.301738 193.729689,128.000254 C193.729689,91.69877 164.30123,62.2703115 127.999746,62.2703115 Z M127.999746,170.667175 C104.435741,170.667175 85.3328252,151.564259 85.3328252,128.000254 C85.3328252,104.436249 104.435741,85.3333333 127.999746,85.3333333 C151.563751,85.3333333 170.666667,104.436249 170.666667,128.000254 C170.666667,151.564259 151.563751,170.667175 127.999746,170.667175 Z M211.686338,59.6734287 C211.686338,68.1566129 204.809755,75.0337031 196.326571,75.0337031 C187.843387,75.0337031 180.966297,68.1566129 180.966297,59.6734287 C180.966297,51.1902445 187.843387,44.3136624 196.326571,44.3136624 C204.809755,44.3136624 211.686338,51.1902445 211.686338,59.6734287 Z"
+                                fill="#ccffff"></path>
+                        </g>
+                    </svg>
                 </div>
-                <div class="about__wrapper-slider">
-                    <div class="about__wrapper-slider-item">
-                        <img src="img/about/1.jpg" alt="slider-item">
-                    </div>
-                    <div class="about__wrapper-slider-item">
-                        <img src="img/about/2.jpg" alt="slider-item">
-                    </div>
-                    <div class="about__wrapper-slider-item">
-                        <img src="img/about/3.jpg" alt="slider-item">
-                    </div>
-                    <div class="about__wrapper-slider-item">
-                        <img src="img/about/4.jpg" alt="slider-item">
-                    </div>
-                    <div class="about__wrapper-slider-item">
-                        <img src="img/about/5.jpg" alt="slider-item">
-                    </div>
-                    <div class="about__wrapper-slider-item">
-                        <img src="img/about/6.jpg" alt="slider-item">
-                    </div>
-                    <div class="about__wrapper-slider-item">
-                        <img src="img/about/7.jpg" alt="slider-item">
-                    </div>
-                    <div class="about__wrapper-slider-item">
-                        <img src="img/about/8.jpg" alt="slider-item">
-                    </div>
+                <address class="contacts__social-descr">
+                    sovacoffee.home
+                </address>
+
+            </a>
+            <div class="contacts__wrapper">
+                <div class="contacts__wrapper-photo">
+                    <img src="img/contacts.jpg" alt="sova">
+                </div>
+                <div class="contacts__wrapper-map">
+                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa27c64d47093c2d9f65e01e8f9770ee2db0e1f097662b0d89e42967625362819&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
+                    <!-- <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa27c64d47093c2d9f65e01e8f9770ee2db0e1f097662b0d89e42967625362819&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe> -->
                 </div>
             </div>
         </div>
-        <div class="about__reviews">
-            <div class="about__reviews-item">
-                <div class="about__reviews-item-descr">Очень вкусная еда, прекрасное обслуживание и очень красиво
-                    внутри. Мне нравится фишка "С добрым утром" в любое время суток. На мой взгляд там самые вкусные
-                    сырники и кофе, хотя, на самом деле, пока не было ни одного блюда, которое бы мне не понравилось. А
-                    и кстати, порции прям внушительные))</div>
-                <div class="about__reviews-item-photo">
-                    <img src="img/reviwes/Daria.png" alt="review">
-                </div>
-                <div class="about__reviews-item-name">Дарья</div>
-            </div>
-            <div class="about__reviews-item">
-                <div class="about__reviews-item-descr">Лучшие!❤️ Каждый день, во время отпуска, приезжали на завтрак в
-                    «Сову», всегда все на высшем уровне! Вкусно, разнообразно и розно!))
-                    Обслуживание топ! Как будем в Могилёве сразу к вам!</div>
-                <div class="about__reviews-item-photo">
-                    <img src="img/reviwes/Kristina.png" alt="review">
-                </div>
-                <div class="about__reviews-item-name">Кристина</div>
-            </div>
-            <div class="about__reviews-item">
-                <div class="about__reviews-item-descr">Очень приятное заведение, с вкусными завтраками в любое время и
-                    где тебе желают доброе утро в любое время суток. Заказали скрэмбел. Для тех кто любит островатую еду
-                    самое то</div>
-                <div class="about__reviews-item-photo">
-                    <img src="img/reviwes/Diana.png" alt="review">
-                </div>
-                <div class="about__reviews-item-name">Диана</div>
-            </div>
-            <div class="about__reviews-item">
-                <div class="about__reviews-item-descr">Очень красивая подача блюд, каждый раз хочется достать телефон и
-                    сфоткать.)
-                    Быстро, вкусно, позиционируется полезно
-                    Всегда тепло и тихонько играет музыка - это огромный плюс.</div>
-                <div class="about__reviews-item-photo">
-                    <img src="img/reviwes/Valentina.png" alt="review">
-                </div>
-                <div class="about__reviews-item-name">Валентина</div>
-            </div>
-            <div class="about__reviews-dots">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
+
     </section>
 
 
