--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://metatags.io/">
     <meta property="og:title" content="SOVA | Завтраки ALL DAY">
     <meta property="og:description" content="Место, где пахнет свежим кофе и целый день подают полезные завтраки!">
-    <meta property="og:image" content="img/interier/main1red.jpg">
+    <meta property="og:image" content="img/interier/main1.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -22,7 +22,7 @@
     <meta property="twitter:title" content="SOVA | Завтраки ALL DAY">
     <meta property="twitter:description"
         content="Место, где пахнет свежим кофе и целый день подают полезные завтраки!">
-    <meta property="twitter:image" content="img/interier/main1red.jpg">
+    <meta property="twitter:image" content="img/interier/main1.jpg">
 
     <!-- Favicon  -->
     <link rel="apple-touch-icon" sizes="57x57" href="icons/favicon/apple-icon-57x57.png">
