Fnal version + correct 21/10/2022

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -124,7 +124,7 @@
             </a>
             <div class="contacts__wrapper">
                 <div class="contacts__wrapper-photo">
-                    <img src="img/contacts.jpg" alt="sova">
+                    <img src="img/contacts2.jpg" alt="sova">
                 </div>
                 <div class="contacts__wrapper-map">
                     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa27c64d47093c2d9f65e01e8f9770ee2db0e1f097662b0d89e42967625362819&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
