--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
     </section>
     <section class="description">
         <div class="container">
-            <h2 class="description__title">Если вы за ЗОЖ-питание, вам стоит точно посетить нас!</h2>
+            <h2 class="description__title">Меняем ваши пищевые привычки в лучшую сторону!</h2>
             <div class="description__line"></div>
             <div class="description__wrapper">
                 <div class="description__img">
