--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
             <ul class="promo__goodMorning-list">
                 <li>Без глютена</li>
                 <li>Без лактозы</li>
-                <li>С низким содержанием сахара</li>
+                <li>Без сахара</li>
             </ul>
            
         </div>
@@ -147,7 +147,7 @@
 
                     Место, где пахнет свежим кофе и целый день подают завтраки!<br>
 
-                    Место, где мы обьединили свежие и полезные продукты в одну красивую картинку на тарелке.<br>
+                    Место, где мы объединили свежие и полезные продукты в одну красивую картинку на тарелке.<br>
                     Мы предлагаем завтраки весь день. В нашем меню блюда с низким содержанием сахара (или без сахара),
                     без глютена и лактозы.
                 </div>
