--- a/src/menu.html
+++ b/src/menu.html
@@ -349,7 +349,7 @@
 
                 </div>
                 <div class="menu__greyLine"></div>
-                <div class="menu__nuts">Орешек из муки зеленой гречки с вареной сгущенкой hand made/ 1 шт. - 0.90р</div>
+                <div class="menu__nuts">Орешек из муки зеленой гречки с вареной сгущенкой hand made<br> 1 шт. - 0.90р</div>
             </div>
 
     </section>
