--- a/src/delivery.html
+++ b/src/delivery.html
@@ -110,7 +110,7 @@
                         <div class="delivery__item-descr">доставка 5 рублей</div>
                     </div>
                     <div class="delivery__item-logo">
-                        <img style="padding: 10px;" src="../img/delivery/coffee.PNG" alt="delivery">
+                        <img style="padding: 10px;" src="img/delivery/coffee.PNG" alt="delivery">
                     </div>
                 </div>
                 <div class="delivery__item wow animate__bounceInUp" data-wow-duration="1.6s">
@@ -119,7 +119,7 @@
                         <div class="delivery__item-descr">доставка 3 рубля</div>
                     </div>
                     <div class="delivery__item-logo">
-                        <img  src="../img/delivery/2bags.PNG" alt="delivery">
+                        <img  src="img/delivery/2bags.PNG" alt="delivery">
                     </div>
                 </div>
                 <div class="delivery__item wow animate__bounceInUp" data-wow-duration="1.7s">
@@ -129,7 +129,7 @@
                                 американо, капучино)</span></div>
                     </div>
                     <div class="delivery__item-logo">
-                        <img src="../img/delivery/3bags.PNG" alt="delivery">
+                        <img src="img/delivery/3bags.PNG" alt="delivery">
                     </div>
                     <!-- <div class="delivery__item-logo">
                         <img src="img/delivery/delivery_bag.png" alt="delivery">
